// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canister Status utility should query canister controllers 1`] = `
[
  {
    "__principal__": "2vxsx-fae",
  },
  {
    "__principal__": "rwlgt-iiaaa-aaaaa-aaaaa-cai",
  },
]
`;

exports[`Canister Status utility should query canister module hash 1`] = `"896f6c079f96bc3cbef782af1ab1b52847f04700ff916eb49425566995a9a064"`;

exports[`Canister Status utility should query the candid interface 1`] = `
"type Example = text;
service : {
  greet: (Example) -> (text) query;
}
"
`;

exports[`Canister Status utility should query the time 1`] = `2022-05-19T20:58:22.596Z`;

exports[`Canister Status utility should support multiple requests 1`] = `2022-05-19T20:58:22.596Z`;

exports[`Canister Status utility should support multiple requests 2`] = `
[
  {
    "__principal__": "2vxsx-fae",
  },
  {
    "__principal__": "rwlgt-iiaaa-aaaaa-aaaaa-cai",
  },
]
`;

exports[`Canister Status utility should support multiple requests with a failure 1`] = `2022-05-19T20:58:22.596Z`;

exports[`Canister Status utility should support valid custom paths 1`] = `1652993902596160000n`;

exports[`Canister Status utility should support valid custom paths 2`] = `
Uint8Array [
  128,
  244,
  133,
  225,
  164,
  166,
  167,
  248,
  22,
]
`;

exports[`Canister Status utility should support valid custom paths 3`] = `
"type Example = text;
service : {
  greet: (Example) -> (text) query;
}
"
`;

exports[`Canister Status utility should support valid custom paths 4`] = `"80f485e1a4a6a7f816"`;

exports[`Canister Status utility should support valid custom paths 5`] = `
[
  Uint8Array [
    4,
  ],
  Uint8Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
  ],
]
`;

exports[`Canister Status utility should support valid metadata queries 1`] = `"74797065204578616d706c65203d20746578743b0a73657276696365203a207b0a202067726565743a20284578616d706c6529202d3e202874657874292071756572793b0a7d0a"`;

exports[`Canister Status utility should support valid metadata queries 2`] = `"74797065204578616d706c65203d20746578743b0a73657276696365203a207b0a202067726565743a20284578616d706c6529202d3e202874657874292071756572793b0a7d0a"`;

exports[`node keys should return the node keys from a local application subnet certificate 1`] = `
{
  "nodeKeys": Map {
    "ego73-sreyv-vpdjs-gxxxh-jormr-swyro-toj4x-obghz-sbk32-duwid-dae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      82,
      103,
      66,
      89,
      47,
      30,
      51,
      26,
      161,
      61,
      183,
      209,
      235,
      242,
      36,
      255,
      11,
      130,
      49,
      224,
      98,
      110,
      238,
      250,
      208,
      182,
      41,
      65,
      58,
      147,
      231,
      152,
    ],
    "tm3pc-2bjsx-hhv3v-fsrt7-wotdj-nbu3t-ewloq-uporp-tacou-lupdn-oae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      153,
      199,
      52,
      229,
      242,
      140,
      80,
      116,
      27,
      4,
      182,
      62,
      135,
      199,
      117,
      51,
      212,
      125,
      194,
      52,
      117,
      36,
      237,
      30,
      200,
      194,
      102,
      228,
      41,
      206,
      246,
      54,
    ],
    "7pwmx-4zsiq-saplf-kl2sd-4yvr3-la2yi-artrs-m7voc-htak4-fii5y-sqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      84,
      67,
      44,
      55,
      180,
      149,
      233,
      32,
      107,
      70,
      181,
      206,
      133,
      218,
      135,
      167,
      235,
      45,
      133,
      60,
      211,
      240,
      47,
      238,
      196,
      172,
      243,
      158,
      254,
      152,
      40,
      80,
    ],
    "gj6gc-mbslq-bt63y-72b7h-xs2xw-6vyuj-frvp3-tx375-dsqx5-wem6o-vqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      89,
      239,
      25,
      230,
      174,
      199,
      51,
      109,
      9,
      18,
      168,
      15,
      226,
      105,
      237,
      79,
      14,
      131,
      96,
      207,
      249,
      220,
      111,
      190,
      122,
      148,
      22,
      67,
      20,
      43,
      180,
      255,
    ],
    "6hkcx-vz4jv-4n33r-ywdvs-sefaa-tb2on-rac6s-4csut-iyahu-zmct2-5qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      118,
      247,
      245,
      45,
      116,
      149,
      92,
      192,
      69,
      131,
      138,
      110,
      247,
      27,
      136,
      45,
      213,
      51,
      155,
      160,
      88,
      189,
      207,
      16,
      133,
      248,
      147,
      179,
      84,
      93,
      68,
      191,
    ],
    "4j5xx-bj63k-iky3j-xrlt4-pel7s-t6wdq-hgqwz-c6xhn-llihg-wxska-rqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      11,
      76,
      160,
      91,
      24,
      181,
      223,
      244,
      239,
      200,
      139,
      173,
      200,
      2,
      188,
      204,
      75,
      174,
      92,
      226,
      241,
      111,
      235,
      230,
      168,
      147,
      144,
      74,
      36,
      10,
      243,
      96,
    ],
    "tg4ec-b2g4p-h42kd-k7zvb-6rls2-i2q7l-gtr4h-ymr6v-rrez4-w6fao-oqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      63,
      41,
      153,
      65,
      73,
      9,
      154,
      161,
      177,
      210,
      220,
      218,
      171,
      229,
      237,
      167,
      58,
      234,
      104,
      102,
      208,
      103,
      226,
      196,
      91,
      151,
      226,
      22,
      83,
      43,
      205,
      51,
    ],
    "swzzz-nct4o-kgh2s-fezeh-luamk-chexm-jsk4r-ks2qa-au63y-jtc7r-pae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      67,
      35,
      50,
      6,
      132,
      212,
      225,
      237,
      184,
      155,
      220,
      222,
      224,
      8,
      68,
      131,
      10,
      15,
      125,
      227,
      227,
      204,
      115,
      70,
      229,
      163,
      134,
      141,
      26,
      239,
      2,
      181,
    ],
    "f3zwq-g3ap2-42acw-twrar-6wire-5uhtr-qyu2e-v7vl7-43e3b-kdz7g-yae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      168,
      250,
      119,
      173,
      108,
      29,
      166,
      213,
      13,
      4,
      251,
      201,
      107,
      243,
      61,
      14,
      48,
      166,
      124,
      30,
      139,
      169,
      127,
      163,
      206,
      124,
      61,
      156,
      134,
      138,
      123,
      153,
    ],
    "lj3ve-ztk3f-wbkmj-garra-gm3kk-f2kas-zq6cw-6url4-ekmls-5vlm5-hae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      94,
      18,
      239,
      14,
      174,
      40,
      9,
      165,
      70,
      132,
      113,
      238,
      45,
      151,
      69,
      210,
      63,
      32,
      177,
      192,
      218,
      113,
      41,
      250,
      68,
      125,
      150,
      166,
      115,
      54,
      190,
      91,
    ],
    "j6uir-h4bk3-chdqr-hxnkr-3jp7o-yb3el-skdsd-7oejj-eubk5-5onvy-zae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      153,
      94,
      61,
      207,
      75,
      15,
      233,
      39,
      190,
      229,
      23,
      44,
      239,
      89,
      91,
      83,
      186,
      206,
      134,
      24,
      88,
      144,
      240,
      82,
      147,
      154,
      99,
      210,
      78,
      171,
      240,
      218,
    ],
    "6hvx2-ymemx-tmykh-vxyic-bgfhv-2lcmt-3oy4x-rysuf-rnerz-vqokw-sqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      220,
      98,
      76,
      202,
      18,
      236,
      29,
      174,
      190,
      221,
      0,
      126,
      200,
      56,
      231,
      121,
      144,
      166,
      218,
      63,
      141,
      255,
      150,
      140,
      238,
      191,
      58,
      14,
      131,
      144,
      86,
      47,
    ],
    "6oooh-jum6y-focwn-kx5ba-omunf-jksiz-25lqk-xvcvb-7afff-3ceei-nqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      209,
      149,
      93,
      208,
      183,
      156,
      132,
      208,
      54,
      66,
      39,
      99,
      195,
      162,
      145,
      84,
      243,
      26,
      185,
      7,
      236,
      220,
      252,
      152,
      112,
      219,
      145,
      219,
      62,
      157,
      186,
      123,
    ],
    "5mpdi-v4qj2-64are-tbe6r-6335g-6tksh-c7uzq-w3xyz-o4p5g-rwnll-vqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      118,
      127,
      49,
      210,
      187,
      118,
      43,
      201,
      250,
      155,
      44,
      190,
      159,
      134,
      80,
      79,
      22,
      66,
      47,
      32,
      111,
      228,
      230,
      30,
      197,
      123,
      115,
      169,
      127,
      234,
      36,
      38,
    ],
    "3xpep-l47ad-vhwcb-gvikf-vpkdj-dbwky-jt5wc-odcdy-b5r4k-fiqbg-7qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      61,
      172,
      70,
      121,
      13,
      216,
      10,
      56,
      176,
      35,
      138,
      195,
      225,
      193,
      118,
      111,
      179,
      4,
      154,
      59,
      70,
      212,
      6,
      196,
      173,
      133,
      204,
      255,
      66,
      49,
      122,
      30,
    ],
    "3rj6n-nnhqn-nad5q-y262v-fuhk4-myqv2-6qzld-ouk7q-fbsuo-l2fi3-6ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      184,
      15,
      71,
      5,
      177,
      66,
      1,
      25,
      172,
      248,
      129,
      251,
      1,
      233,
      15,
      80,
      4,
      77,
      247,
      43,
      24,
      147,
      204,
      164,
      75,
      78,
      129,
      18,
      158,
      122,
      62,
      110,
    ],
    "p3g3j-vvhxl-luedm-woh3j-sllez-jkbzz-274bf-hyuoc-kyo5t-kwziw-eae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      138,
      165,
      187,
      121,
      148,
      139,
      41,
      108,
      18,
      193,
      65,
      49,
      179,
      95,
      144,
      9,
      206,
      51,
      25,
      129,
      176,
      140,
      126,
      197,
      122,
      89,
      92,
      110,
      218,
      89,
      214,
      147,
    ],
    "y5xp4-nnr33-qeeeg-55unp-xr7f2-mkjfv-7qwe3-zxd7k-lmqd2-mftya-7ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      3,
      23,
      57,
      211,
      19,
      146,
      69,
      241,
      1,
      52,
      157,
      77,
      47,
      184,
      205,
      194,
      226,
      112,
      112,
      132,
      211,
      254,
      241,
      208,
      51,
      4,
      45,
      100,
      235,
      212,
      82,
      187,
    ],
    "tetdc-mvyld-p3miw-jdreb-5apjz-w73pk-3y3jo-3w6qj-2lrsc-6d2bq-nae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      205,
      89,
      241,
      142,
      234,
      149,
      76,
      31,
      200,
      227,
      21,
      9,
      150,
      87,
      217,
      41,
      182,
      191,
      183,
      254,
      250,
      219,
      123,
      178,
      20,
      68,
      136,
      9,
      244,
      169,
      209,
      159,
    ],
    "pbken-vny4r-j4a2m-zlvt2-kjj4i-pwehn-ftsa4-ne4xu-yz72s-fk6nz-eqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      121,
      215,
      149,
      3,
      131,
      139,
      43,
      1,
      121,
      31,
      102,
      193,
      139,
      199,
      97,
      78,
      25,
      211,
      166,
      171,
      167,
      59,
      174,
      0,
      185,
      43,
      185,
      158,
      222,
      234,
      82,
      135,
    ],
    "xgysg-f6alc-ft2ai-gseic-u3ohh-cvvkf-5pvjh-spcbk-gvkla-bwswo-jae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      135,
      158,
      229,
      102,
      237,
      248,
      161,
      23,
      23,
      18,
      12,
      202,
      62,
      75,
      21,
      33,
      240,
      122,
      120,
      28,
      109,
      121,
      221,
      218,
      99,
      123,
      58,
      76,
      119,
      15,
      111,
      198,
    ],
    "ykydc-iog7g-744rt-mzbay-jnwat-e5bx5-invpc-f6d22-leoix-tide2-6qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      216,
      224,
      145,
      87,
      44,
      50,
      94,
      228,
      237,
      245,
      97,
      200,
      240,
      200,
      95,
      89,
      32,
      63,
      75,
      121,
      233,
      85,
      242,
      173,
      202,
      243,
      157,
      201,
      3,
      123,
      89,
      203,
    ],
    "geihd-pwhjg-q3tno-beo64-ormih-pkjah-rrdlu-quwdk-nas5k-lmzoo-pae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      191,
      161,
      177,
      87,
      88,
      3,
      213,
      251,
      33,
      3,
      42,
      105,
      255,
      80,
      160,
      74,
      51,
      148,
      219,
      166,
      60,
      80,
      158,
      154,
      26,
      233,
      237,
      247,
      129,
      179,
      241,
      116,
    ],
    "ojfqu-qooyf-umyhe-bryn4-x6dcf-qv7ax-vnr5r-22ioq-jycjr-7le7t-uae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      220,
      26,
      140,
      215,
      120,
      151,
      121,
      59,
      181,
      182,
      187,
      187,
      186,
      178,
      172,
      130,
      143,
      33,
      44,
      49,
      239,
      125,
      140,
      209,
      165,
      233,
      218,
      113,
      212,
      54,
      138,
      26,
    ],
    "gsrhr-kwp6h-y6ibc-yftud-fzi66-vg5df-subl3-wiren-uzza6-rb5fc-dae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      185,
      243,
      201,
      157,
      5,
      76,
      87,
      20,
      131,
      55,
      28,
      171,
      171,
      171,
      235,
      167,
      26,
      149,
      175,
      47,
      29,
      183,
      90,
      158,
      255,
      83,
      98,
      160,
      1,
      104,
      186,
      179,
    ],
    "jjrbu-lwq3g-6z32f-54avq-c6jcp-sxp3o-kn4sf-hiiy4-jkuiy-252or-4ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      205,
      141,
      46,
      194,
      255,
      33,
      86,
      30,
      39,
      114,
      217,
      230,
      142,
      162,
      73,
      219,
      232,
      116,
      194,
      20,
      137,
      156,
      51,
      197,
      80,
      52,
      68,
      179,
      71,
      134,
      190,
      50,
    ],
    "anudy-m6vfi-lphxb-sazpy-la4ti-2hriw-c67ny-butfn-axcel-otvuh-oqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      1,
      62,
      185,
      80,
      22,
      44,
      7,
      216,
      93,
      245,
      62,
      1,
      117,
      144,
      82,
      242,
      57,
      233,
      83,
      181,
      146,
      209,
      49,
      33,
      202,
      92,
      3,
      142,
      40,
      182,
      234,
      40,
    ],
    "7o4d4-a6vmb-6bhh5-7ajyh-b5ejo-5bryc-gepsl-bthwu-65lee-52ebc-jqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      69,
      88,
      249,
      86,
      193,
      25,
      127,
      87,
      222,
      94,
      218,
      97,
      232,
      143,
      111,
      235,
      43,
      205,
      151,
      203,
      105,
      153,
      46,
      223,
      62,
      215,
      115,
      38,
      55,
      100,
      71,
      204,
    ],
    "n4d4s-hgx3a-nwox5-tmfqw-q2gu6-mlzhy-deyzq-zu6r7-wryv2-napyl-qae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      69,
      80,
      68,
      221,
      158,
      175,
      122,
      13,
      212,
      99,
      216,
      225,
      148,
      244,
      193,
      11,
      212,
      148,
      60,
      252,
      155,
      234,
      240,
      231,
      174,
      64,
      116,
      55,
      61,
      21,
      72,
      147,
    ],
    "trupz-4o3zm-6itr3-6fjf3-ipbci-r2scy-pvycg-xlh4x-vtokf-avpr6-oqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      177,
      193,
      99,
      227,
      20,
      87,
      229,
      175,
      153,
      3,
      60,
      32,
      163,
      19,
      55,
      28,
      58,
      0,
      35,
      122,
      59,
      237,
      242,
      206,
      140,
      223,
      239,
      71,
      93,
      181,
      184,
      117,
    ],
    "ggo52-qw45f-gqsnk-kc5i5-dag7l-7qkr4-2sy44-wxvr4-gohy7-ep56u-2ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      3,
      145,
      230,
      70,
      242,
      159,
      135,
      146,
      148,
      116,
      72,
      151,
      67,
      210,
      149,
      138,
      189,
      151,
      61,
      237,
      24,
      38,
      209,
      70,
      177,
      213,
      205,
      103,
      174,
      5,
      181,
      93,
    ],
    "ufrjv-g66xi-c2bye-vujv7-cjih6-6jimn-ih2mx-4aev6-rzhu2-4c5xn-7ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      4,
      98,
      59,
      71,
      103,
      169,
      121,
      216,
      84,
      241,
      24,
      234,
      173,
      18,
      119,
      123,
      95,
      250,
      10,
      176,
      217,
      100,
      7,
      8,
      246,
      133,
      121,
      203,
      79,
      103,
      0,
      53,
    ],
    "vsuqg-6hald-hxxxi-bxr2s-e5af5-p5lsr-2sutj-pip7r-co24u-2he35-hqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      114,
      222,
      27,
      22,
      0,
      119,
      103,
      78,
      116,
      90,
      157,
      3,
      231,
      90,
      148,
      50,
      98,
      42,
      173,
      168,
      34,
      157,
      54,
      209,
      43,
      72,
      206,
      86,
      120,
      130,
      224,
      211,
    ],
    "as7de-zpig4-4hbwa-gnwlr-yqk4x-wxrme-n47bg-ngzcn-ekzyt-xuv3h-sae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      200,
      207,
      78,
      137,
      154,
      114,
      39,
      182,
      86,
      2,
      133,
      33,
      186,
      109,
      124,
      48,
      85,
      40,
      225,
      32,
      73,
      141,
      178,
      225,
      69,
      181,
      68,
      139,
      150,
      248,
      36,
      205,
    ],
    "eweqa-s7ilr-pmqbi-7gx46-hsiv4-pn3hq-zk6zi-gwktg-rn2mb-piahs-cqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      47,
      46,
      113,
      96,
      231,
      117,
      184,
      153,
      179,
      146,
      27,
      58,
      150,
      118,
      55,
      58,
      84,
      44,
      126,
      228,
      150,
      93,
      59,
      67,
      149,
      39,
      129,
      130,
      11,
      136,
      11,
      147,
    ],
    "qccxj-nhnre-k2hq2-zxdqw-3kjpf-rbnn6-6ngt6-meoqb-c5ypx-jltjs-mqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      61,
      184,
      135,
      70,
      167,
      222,
      247,
      117,
      68,
      122,
      235,
      234,
      176,
      127,
      53,
      167,
      171,
      50,
      90,
      30,
      21,
      108,
      29,
      7,
      109,
      162,
      239,
      152,
      140,
      244,
      207,
      141,
    ],
    "chm6s-bxqgk-jv6em-fbfrr-o54oi-idorx-rdpj7-asc5a-wmujl-awa77-2qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      136,
      236,
      205,
      176,
      206,
      171,
      26,
      65,
      163,
      52,
      150,
      219,
      252,
      122,
      186,
      193,
      69,
      209,
      103,
      67,
      99,
      197,
      39,
      243,
      103,
      7,
      181,
      59,
      53,
      79,
      125,
      35,
    ],
    "5jo56-bxsxy-ocmas-lzhqq-hvtc3-7iwps-76qyk-abz3u-rn3xr-ya23r-4qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      111,
      237,
      92,
      25,
      191,
      205,
      246,
      127,
      30,
      141,
      154,
      134,
      111,
      130,
      109,
      137,
      203,
      5,
      189,
      205,
      64,
      203,
      99,
      58,
      93,
      118,
      69,
      248,
      35,
      148,
      102,
      92,
    ],
    "s2p3k-c7zfo-3ogmz-esx75-id6pg-6xv72-kifmd-gp46u-ay6vt-d7i5d-5ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      56,
      232,
      122,
      143,
      204,
      36,
      205,
      170,
      216,
      84,
      26,
      216,
      138,
      13,
      31,
      82,
      26,
      140,
      155,
      188,
      41,
      55,
      147,
      130,
      5,
      86,
      2,
      202,
      89,
      210,
      38,
      255,
    ],
    "felsm-ix5rz-avdrd-wfwnu-w2zw4-cgtnj-e3qpu-ulcsq-icq5y-jwwhn-jqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      25,
      9,
      213,
      238,
      251,
      176,
      7,
      91,
      49,
      118,
      6,
      155,
      122,
      196,
      166,
      233,
      153,
      52,
      52,
      42,
      143,
      229,
      179,
      236,
      48,
      29,
      32,
      182,
      207,
      69,
      62,
      83,
    ],
  },
  "subnetId": "tdb26-jop6k-aogll-7ltgs-eruif-6kk7m-qpktf-gdiqx-mxtrf-vb5e6-eqe",
}
`;

exports[`node keys should return the node keys from a local system subnet certificate 1`] = `
{
  "nodeKeys": Map {
    "ego73-sreyv-vpdjs-gxxxh-jormr-swyro-toj4x-obghz-sbk32-duwid-dae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      82,
      103,
      66,
      89,
      47,
      30,
      51,
      26,
      161,
      61,
      183,
      209,
      235,
      242,
      36,
      255,
      11,
      130,
      49,
      224,
      98,
      110,
      238,
      250,
      208,
      182,
      41,
      65,
      58,
      147,
      231,
      152,
    ],
    "tm3pc-2bjsx-hhv3v-fsrt7-wotdj-nbu3t-ewloq-uporp-tacou-lupdn-oae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      153,
      199,
      52,
      229,
      242,
      140,
      80,
      116,
      27,
      4,
      182,
      62,
      135,
      199,
      117,
      51,
      212,
      125,
      194,
      52,
      117,
      36,
      237,
      30,
      200,
      194,
      102,
      228,
      41,
      206,
      246,
      54,
    ],
    "7pwmx-4zsiq-saplf-kl2sd-4yvr3-la2yi-artrs-m7voc-htak4-fii5y-sqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      84,
      67,
      44,
      55,
      180,
      149,
      233,
      32,
      107,
      70,
      181,
      206,
      133,
      218,
      135,
      167,
      235,
      45,
      133,
      60,
      211,
      240,
      47,
      238,
      196,
      172,
      243,
      158,
      254,
      152,
      40,
      80,
    ],
    "gj6gc-mbslq-bt63y-72b7h-xs2xw-6vyuj-frvp3-tx375-dsqx5-wem6o-vqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      89,
      239,
      25,
      230,
      174,
      199,
      51,
      109,
      9,
      18,
      168,
      15,
      226,
      105,
      237,
      79,
      14,
      131,
      96,
      207,
      249,
      220,
      111,
      190,
      122,
      148,
      22,
      67,
      20,
      43,
      180,
      255,
    ],
    "6hkcx-vz4jv-4n33r-ywdvs-sefaa-tb2on-rac6s-4csut-iyahu-zmct2-5qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      118,
      247,
      245,
      45,
      116,
      149,
      92,
      192,
      69,
      131,
      138,
      110,
      247,
      27,
      136,
      45,
      213,
      51,
      155,
      160,
      88,
      189,
      207,
      16,
      133,
      248,
      147,
      179,
      84,
      93,
      68,
      191,
    ],
    "4j5xx-bj63k-iky3j-xrlt4-pel7s-t6wdq-hgqwz-c6xhn-llihg-wxska-rqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      11,
      76,
      160,
      91,
      24,
      181,
      223,
      244,
      239,
      200,
      139,
      173,
      200,
      2,
      188,
      204,
      75,
      174,
      92,
      226,
      241,
      111,
      235,
      230,
      168,
      147,
      144,
      74,
      36,
      10,
      243,
      96,
    ],
    "tg4ec-b2g4p-h42kd-k7zvb-6rls2-i2q7l-gtr4h-ymr6v-rrez4-w6fao-oqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      63,
      41,
      153,
      65,
      73,
      9,
      154,
      161,
      177,
      210,
      220,
      218,
      171,
      229,
      237,
      167,
      58,
      234,
      104,
      102,
      208,
      103,
      226,
      196,
      91,
      151,
      226,
      22,
      83,
      43,
      205,
      51,
    ],
    "swzzz-nct4o-kgh2s-fezeh-luamk-chexm-jsk4r-ks2qa-au63y-jtc7r-pae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      67,
      35,
      50,
      6,
      132,
      212,
      225,
      237,
      184,
      155,
      220,
      222,
      224,
      8,
      68,
      131,
      10,
      15,
      125,
      227,
      227,
      204,
      115,
      70,
      229,
      163,
      134,
      141,
      26,
      239,
      2,
      181,
    ],
    "f3zwq-g3ap2-42acw-twrar-6wire-5uhtr-qyu2e-v7vl7-43e3b-kdz7g-yae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      168,
      250,
      119,
      173,
      108,
      29,
      166,
      213,
      13,
      4,
      251,
      201,
      107,
      243,
      61,
      14,
      48,
      166,
      124,
      30,
      139,
      169,
      127,
      163,
      206,
      124,
      61,
      156,
      134,
      138,
      123,
      153,
    ],
    "lj3ve-ztk3f-wbkmj-garra-gm3kk-f2kas-zq6cw-6url4-ekmls-5vlm5-hae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      94,
      18,
      239,
      14,
      174,
      40,
      9,
      165,
      70,
      132,
      113,
      238,
      45,
      151,
      69,
      210,
      63,
      32,
      177,
      192,
      218,
      113,
      41,
      250,
      68,
      125,
      150,
      166,
      115,
      54,
      190,
      91,
    ],
    "j6uir-h4bk3-chdqr-hxnkr-3jp7o-yb3el-skdsd-7oejj-eubk5-5onvy-zae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      153,
      94,
      61,
      207,
      75,
      15,
      233,
      39,
      190,
      229,
      23,
      44,
      239,
      89,
      91,
      83,
      186,
      206,
      134,
      24,
      88,
      144,
      240,
      82,
      147,
      154,
      99,
      210,
      78,
      171,
      240,
      218,
    ],
    "6hvx2-ymemx-tmykh-vxyic-bgfhv-2lcmt-3oy4x-rysuf-rnerz-vqokw-sqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      220,
      98,
      76,
      202,
      18,
      236,
      29,
      174,
      190,
      221,
      0,
      126,
      200,
      56,
      231,
      121,
      144,
      166,
      218,
      63,
      141,
      255,
      150,
      140,
      238,
      191,
      58,
      14,
      131,
      144,
      86,
      47,
    ],
    "6oooh-jum6y-focwn-kx5ba-omunf-jksiz-25lqk-xvcvb-7afff-3ceei-nqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      209,
      149,
      93,
      208,
      183,
      156,
      132,
      208,
      54,
      66,
      39,
      99,
      195,
      162,
      145,
      84,
      243,
      26,
      185,
      7,
      236,
      220,
      252,
      152,
      112,
      219,
      145,
      219,
      62,
      157,
      186,
      123,
    ],
    "5mpdi-v4qj2-64are-tbe6r-6335g-6tksh-c7uzq-w3xyz-o4p5g-rwnll-vqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      118,
      127,
      49,
      210,
      187,
      118,
      43,
      201,
      250,
      155,
      44,
      190,
      159,
      134,
      80,
      79,
      22,
      66,
      47,
      32,
      111,
      228,
      230,
      30,
      197,
      123,
      115,
      169,
      127,
      234,
      36,
      38,
    ],
    "3xpep-l47ad-vhwcb-gvikf-vpkdj-dbwky-jt5wc-odcdy-b5r4k-fiqbg-7qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      61,
      172,
      70,
      121,
      13,
      216,
      10,
      56,
      176,
      35,
      138,
      195,
      225,
      193,
      118,
      111,
      179,
      4,
      154,
      59,
      70,
      212,
      6,
      196,
      173,
      133,
      204,
      255,
      66,
      49,
      122,
      30,
    ],
    "3rj6n-nnhqn-nad5q-y262v-fuhk4-myqv2-6qzld-ouk7q-fbsuo-l2fi3-6ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      184,
      15,
      71,
      5,
      177,
      66,
      1,
      25,
      172,
      248,
      129,
      251,
      1,
      233,
      15,
      80,
      4,
      77,
      247,
      43,
      24,
      147,
      204,
      164,
      75,
      78,
      129,
      18,
      158,
      122,
      62,
      110,
    ],
    "p3g3j-vvhxl-luedm-woh3j-sllez-jkbzz-274bf-hyuoc-kyo5t-kwziw-eae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      138,
      165,
      187,
      121,
      148,
      139,
      41,
      108,
      18,
      193,
      65,
      49,
      179,
      95,
      144,
      9,
      206,
      51,
      25,
      129,
      176,
      140,
      126,
      197,
      122,
      89,
      92,
      110,
      218,
      89,
      214,
      147,
    ],
    "y5xp4-nnr33-qeeeg-55unp-xr7f2-mkjfv-7qwe3-zxd7k-lmqd2-mftya-7ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      3,
      23,
      57,
      211,
      19,
      146,
      69,
      241,
      1,
      52,
      157,
      77,
      47,
      184,
      205,
      194,
      226,
      112,
      112,
      132,
      211,
      254,
      241,
      208,
      51,
      4,
      45,
      100,
      235,
      212,
      82,
      187,
    ],
    "tetdc-mvyld-p3miw-jdreb-5apjz-w73pk-3y3jo-3w6qj-2lrsc-6d2bq-nae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      205,
      89,
      241,
      142,
      234,
      149,
      76,
      31,
      200,
      227,
      21,
      9,
      150,
      87,
      217,
      41,
      182,
      191,
      183,
      254,
      250,
      219,
      123,
      178,
      20,
      68,
      136,
      9,
      244,
      169,
      209,
      159,
    ],
    "pbken-vny4r-j4a2m-zlvt2-kjj4i-pwehn-ftsa4-ne4xu-yz72s-fk6nz-eqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      121,
      215,
      149,
      3,
      131,
      139,
      43,
      1,
      121,
      31,
      102,
      193,
      139,
      199,
      97,
      78,
      25,
      211,
      166,
      171,
      167,
      59,
      174,
      0,
      185,
      43,
      185,
      158,
      222,
      234,
      82,
      135,
    ],
    "xgysg-f6alc-ft2ai-gseic-u3ohh-cvvkf-5pvjh-spcbk-gvkla-bwswo-jae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      135,
      158,
      229,
      102,
      237,
      248,
      161,
      23,
      23,
      18,
      12,
      202,
      62,
      75,
      21,
      33,
      240,
      122,
      120,
      28,
      109,
      121,
      221,
      218,
      99,
      123,
      58,
      76,
      119,
      15,
      111,
      198,
    ],
    "ykydc-iog7g-744rt-mzbay-jnwat-e5bx5-invpc-f6d22-leoix-tide2-6qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      216,
      224,
      145,
      87,
      44,
      50,
      94,
      228,
      237,
      245,
      97,
      200,
      240,
      200,
      95,
      89,
      32,
      63,
      75,
      121,
      233,
      85,
      242,
      173,
      202,
      243,
      157,
      201,
      3,
      123,
      89,
      203,
    ],
    "geihd-pwhjg-q3tno-beo64-ormih-pkjah-rrdlu-quwdk-nas5k-lmzoo-pae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      191,
      161,
      177,
      87,
      88,
      3,
      213,
      251,
      33,
      3,
      42,
      105,
      255,
      80,
      160,
      74,
      51,
      148,
      219,
      166,
      60,
      80,
      158,
      154,
      26,
      233,
      237,
      247,
      129,
      179,
      241,
      116,
    ],
    "ojfqu-qooyf-umyhe-bryn4-x6dcf-qv7ax-vnr5r-22ioq-jycjr-7le7t-uae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      220,
      26,
      140,
      215,
      120,
      151,
      121,
      59,
      181,
      182,
      187,
      187,
      186,
      178,
      172,
      130,
      143,
      33,
      44,
      49,
      239,
      125,
      140,
      209,
      165,
      233,
      218,
      113,
      212,
      54,
      138,
      26,
    ],
    "gsrhr-kwp6h-y6ibc-yftud-fzi66-vg5df-subl3-wiren-uzza6-rb5fc-dae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      185,
      243,
      201,
      157,
      5,
      76,
      87,
      20,
      131,
      55,
      28,
      171,
      171,
      171,
      235,
      167,
      26,
      149,
      175,
      47,
      29,
      183,
      90,
      158,
      255,
      83,
      98,
      160,
      1,
      104,
      186,
      179,
    ],
    "jjrbu-lwq3g-6z32f-54avq-c6jcp-sxp3o-kn4sf-hiiy4-jkuiy-252or-4ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      205,
      141,
      46,
      194,
      255,
      33,
      86,
      30,
      39,
      114,
      217,
      230,
      142,
      162,
      73,
      219,
      232,
      116,
      194,
      20,
      137,
      156,
      51,
      197,
      80,
      52,
      68,
      179,
      71,
      134,
      190,
      50,
    ],
    "anudy-m6vfi-lphxb-sazpy-la4ti-2hriw-c67ny-butfn-axcel-otvuh-oqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      1,
      62,
      185,
      80,
      22,
      44,
      7,
      216,
      93,
      245,
      62,
      1,
      117,
      144,
      82,
      242,
      57,
      233,
      83,
      181,
      146,
      209,
      49,
      33,
      202,
      92,
      3,
      142,
      40,
      182,
      234,
      40,
    ],
    "7o4d4-a6vmb-6bhh5-7ajyh-b5ejo-5bryc-gepsl-bthwu-65lee-52ebc-jqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      69,
      88,
      249,
      86,
      193,
      25,
      127,
      87,
      222,
      94,
      218,
      97,
      232,
      143,
      111,
      235,
      43,
      205,
      151,
      203,
      105,
      153,
      46,
      223,
      62,
      215,
      115,
      38,
      55,
      100,
      71,
      204,
    ],
    "n4d4s-hgx3a-nwox5-tmfqw-q2gu6-mlzhy-deyzq-zu6r7-wryv2-napyl-qae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      69,
      80,
      68,
      221,
      158,
      175,
      122,
      13,
      212,
      99,
      216,
      225,
      148,
      244,
      193,
      11,
      212,
      148,
      60,
      252,
      155,
      234,
      240,
      231,
      174,
      64,
      116,
      55,
      61,
      21,
      72,
      147,
    ],
    "trupz-4o3zm-6itr3-6fjf3-ipbci-r2scy-pvycg-xlh4x-vtokf-avpr6-oqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      177,
      193,
      99,
      227,
      20,
      87,
      229,
      175,
      153,
      3,
      60,
      32,
      163,
      19,
      55,
      28,
      58,
      0,
      35,
      122,
      59,
      237,
      242,
      206,
      140,
      223,
      239,
      71,
      93,
      181,
      184,
      117,
    ],
    "ggo52-qw45f-gqsnk-kc5i5-dag7l-7qkr4-2sy44-wxvr4-gohy7-ep56u-2ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      3,
      145,
      230,
      70,
      242,
      159,
      135,
      146,
      148,
      116,
      72,
      151,
      67,
      210,
      149,
      138,
      189,
      151,
      61,
      237,
      24,
      38,
      209,
      70,
      177,
      213,
      205,
      103,
      174,
      5,
      181,
      93,
    ],
    "ufrjv-g66xi-c2bye-vujv7-cjih6-6jimn-ih2mx-4aev6-rzhu2-4c5xn-7ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      4,
      98,
      59,
      71,
      103,
      169,
      121,
      216,
      84,
      241,
      24,
      234,
      173,
      18,
      119,
      123,
      95,
      250,
      10,
      176,
      217,
      100,
      7,
      8,
      246,
      133,
      121,
      203,
      79,
      103,
      0,
      53,
    ],
    "vsuqg-6hald-hxxxi-bxr2s-e5af5-p5lsr-2sutj-pip7r-co24u-2he35-hqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      114,
      222,
      27,
      22,
      0,
      119,
      103,
      78,
      116,
      90,
      157,
      3,
      231,
      90,
      148,
      50,
      98,
      42,
      173,
      168,
      34,
      157,
      54,
      209,
      43,
      72,
      206,
      86,
      120,
      130,
      224,
      211,
    ],
    "as7de-zpig4-4hbwa-gnwlr-yqk4x-wxrme-n47bg-ngzcn-ekzyt-xuv3h-sae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      200,
      207,
      78,
      137,
      154,
      114,
      39,
      182,
      86,
      2,
      133,
      33,
      186,
      109,
      124,
      48,
      85,
      40,
      225,
      32,
      73,
      141,
      178,
      225,
      69,
      181,
      68,
      139,
      150,
      248,
      36,
      205,
    ],
    "eweqa-s7ilr-pmqbi-7gx46-hsiv4-pn3hq-zk6zi-gwktg-rn2mb-piahs-cqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      47,
      46,
      113,
      96,
      231,
      117,
      184,
      153,
      179,
      146,
      27,
      58,
      150,
      118,
      55,
      58,
      84,
      44,
      126,
      228,
      150,
      93,
      59,
      67,
      149,
      39,
      129,
      130,
      11,
      136,
      11,
      147,
    ],
    "qccxj-nhnre-k2hq2-zxdqw-3kjpf-rbnn6-6ngt6-meoqb-c5ypx-jltjs-mqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      61,
      184,
      135,
      70,
      167,
      222,
      247,
      117,
      68,
      122,
      235,
      234,
      176,
      127,
      53,
      167,
      171,
      50,
      90,
      30,
      21,
      108,
      29,
      7,
      109,
      162,
      239,
      152,
      140,
      244,
      207,
      141,
    ],
    "chm6s-bxqgk-jv6em-fbfrr-o54oi-idorx-rdpj7-asc5a-wmujl-awa77-2qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      136,
      236,
      205,
      176,
      206,
      171,
      26,
      65,
      163,
      52,
      150,
      219,
      252,
      122,
      186,
      193,
      69,
      209,
      103,
      67,
      99,
      197,
      39,
      243,
      103,
      7,
      181,
      59,
      53,
      79,
      125,
      35,
    ],
    "5jo56-bxsxy-ocmas-lzhqq-hvtc3-7iwps-76qyk-abz3u-rn3xr-ya23r-4qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      111,
      237,
      92,
      25,
      191,
      205,
      246,
      127,
      30,
      141,
      154,
      134,
      111,
      130,
      109,
      137,
      203,
      5,
      189,
      205,
      64,
      203,
      99,
      58,
      93,
      118,
      69,
      248,
      35,
      148,
      102,
      92,
    ],
    "s2p3k-c7zfo-3ogmz-esx75-id6pg-6xv72-kifmd-gp46u-ay6vt-d7i5d-5ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      56,
      232,
      122,
      143,
      204,
      36,
      205,
      170,
      216,
      84,
      26,
      216,
      138,
      13,
      31,
      82,
      26,
      140,
      155,
      188,
      41,
      55,
      147,
      130,
      5,
      86,
      2,
      202,
      89,
      210,
      38,
      255,
    ],
    "felsm-ix5rz-avdrd-wfwnu-w2zw4-cgtnj-e3qpu-ulcsq-icq5y-jwwhn-jqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      25,
      9,
      213,
      238,
      251,
      176,
      7,
      91,
      49,
      118,
      6,
      155,
      122,
      196,
      166,
      233,
      153,
      52,
      52,
      42,
      143,
      229,
      179,
      236,
      48,
      29,
      32,
      182,
      207,
      69,
      62,
      83,
    ],
  },
  "subnetId": "tdb26-jop6k-aogll-7ltgs-eruif-6kk7m-qpktf-gdiqx-mxtrf-vb5e6-eqe",
}
`;

exports[`node keys should return the node keys from a mainnet application subnet certificate 1`] = `
{
  "nodeKeys": Map {
    "djil5-54fkt-55svu-26a7h-ttflx-dqn6u-3w3j6-zyuwg-cfwuo-7oi46-uae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      91,
      11,
      223,
      3,
      41,
      147,
      42,
      176,
      167,
      143,
      167,
      25,
      42,
      215,
      108,
      243,
      125,
      103,
      235,
      32,
      36,
      115,
      151,
      116,
      211,
      182,
      125,
      167,
      121,
      158,
      188,
      156,
    ],
    "abiez-tmiok-onixf-alhrk-6ki4c-uquml-fnpvd-zirix-brula-uheyo-5ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      151,
      118,
      210,
      85,
      66,
      135,
      61,
      175,
      184,
      9,
      147,
      3,
      209,
      252,
      168,
      228,
      170,
      52,
      78,
      115,
      207,
      90,
      61,
      125,
      245,
      180,
      15,
      156,
      142,
      213,
      160,
      133,
    ],
    "m2g5i-bmomq-dyjao-k642i-fsfxg-trxki-6i42q-hm6ec-xu5cd-n5jhq-sqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      229,
      169,
      41,
      101,
      113,
      130,
      108,
      195,
      190,
      151,
      116,
      144,
      41,
      100,
      5,
      174,
      157,
      161,
      218,
      125,
      89,
      204,
      225,
      100,
      36,
      33,
      188,
      25,
      128,
      76,
      195,
      16,
    ],
    "wj4ul-2uxc6-4zyg7-ubs4e-meno4-2pjfz-3rl2y-ksarb-vlbjx-zrnpy-6qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      183,
      97,
      169,
      62,
      65,
      138,
      179,
      38,
      210,
      209,
      6,
      217,
      19,
      114,
      104,
      212,
      7,
      247,
      200,
      167,
      67,
      18,
      126,
      40,
      51,
      137,
      153,
      51,
      51,
      126,
      176,
      155,
    ],
    "ul75e-6e3ls-pno2p-y3plc-cd2gq-dfnw4-56woc-s45vm-ipu6u-lotli-uae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      175,
      213,
      99,
      119,
      71,
      141,
      199,
      17,
      203,
      254,
      4,
      48,
      34,
      66,
      61,
      159,
      127,
      125,
      236,
      183,
      9,
      222,
      117,
      1,
      84,
      89,
      35,
      39,
      65,
      134,
      136,
      63,
    ],
    "y6xdi-6nbil-4w6ju-4vqux-wdl5m-uofuq-2hbv4-dels3-knu42-xievh-hae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      206,
      118,
      147,
      149,
      64,
      202,
      200,
      222,
      52,
      117,
      50,
      149,
      23,
      198,
      132,
      224,
      86,
      47,
      182,
      203,
      173,
      29,
      182,
      127,
      182,
      3,
      98,
      128,
      139,
      218,
      244,
      98,
    ],
    "q2gfr-yfiod-ohoo3-czlr4-ghfbs-bp7pr-zefjc-gbpyy-lfg4y-etedq-lqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      22,
      69,
      167,
      203,
      127,
      57,
      128,
      221,
      111,
      156,
      166,
      202,
      9,
      102,
      164,
      212,
      189,
      233,
      213,
      125,
      144,
      223,
      15,
      16,
      252,
      49,
      234,
      201,
      96,
      168,
      171,
      65,
    ],
    "w2l33-vvva3-qvjdn-2vgqn-qqbif-i6fuy-ekpwi-ksq22-ru4rz-6ycrr-tae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      12,
      68,
      31,
      173,
      165,
      159,
      234,
      28,
      242,
      30,
      188,
      21,
      115,
      146,
      51,
      140,
      165,
      103,
      117,
      1,
      28,
      76,
      86,
      48,
      120,
      40,
      35,
      226,
      167,
      147,
      140,
      143,
    ],
    "5flj4-x56ts-jud7h-rzygl-a7uas-2degg-kyz5e-xojpt-pbuph-34zby-bae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      244,
      8,
      179,
      98,
      252,
      146,
      37,
      90,
      71,
      118,
      102,
      97,
      121,
      235,
      164,
      185,
      223,
      189,
      109,
      59,
      159,
      107,
      135,
      179,
      171,
      184,
      15,
      114,
      104,
      120,
      224,
      169,
    ],
    "7ft3v-76mqt-5r3h4-qiwe4-mkobb-mcsue-qugga-ctzdk-623if-rynkj-jqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      202,
      181,
      239,
      211,
      32,
      95,
      164,
      179,
      64,
      155,
      111,
      94,
      66,
      30,
      189,
      119,
      109,
      211,
      110,
      166,
      16,
      136,
      32,
      198,
      36,
      71,
      128,
      22,
      223,
      156,
      106,
      32,
    ],
    "kte5g-iwzok-3epfk-lovgf-cylc5-57lmu-olhwg-w4jsn-dquju-5xun6-uae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      230,
      80,
      161,
      204,
      75,
      242,
      100,
      205,
      200,
      4,
      66,
      211,
      61,
      123,
      208,
      14,
      61,
      225,
      241,
      93,
      221,
      72,
      199,
      172,
      15,
      47,
      229,
      130,
      245,
      153,
      217,
      84,
    ],
    "c3clp-pxh3b-ut2t3-dejla-zsfqz-k2cqd-2aygq-zk7pf-cv3is-oqr5k-oqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      190,
      7,
      89,
      211,
      1,
      114,
      169,
      223,
      220,
      194,
      225,
      27,
      146,
      232,
      218,
      241,
      117,
      60,
      69,
      241,
      38,
      184,
      65,
      60,
      142,
      87,
      230,
      33,
      181,
      98,
      109,
      55,
    ],
    "ucumw-ex6s5-r7nyd-x546u-f4rcl-qllyh-waid4-xxzvn-25op7-gnsjy-bae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      107,
      142,
      247,
      43,
      14,
      251,
      78,
      243,
      141,
      201,
      87,
      9,
      124,
      178,
      109,
      252,
      242,
      75,
      8,
      61,
      214,
      178,
      181,
      252,
      213,
      38,
      150,
      87,
      205,
      142,
      89,
      167,
    ],
  },
  "subnetId": "pae4o-o6dxf-xki7q-ezclx-znyd6-fnk6w-vkv5z-5lfwh-xym2i-otrrw-fqe",
}
`;

exports[`node keys should return the node keys from a mainnet system subnet certificate 1`] = `
{
  "nodeKeys": Map {
    "ego73-sreyv-vpdjs-gxxxh-jormr-swyro-toj4x-obghz-sbk32-duwid-dae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      82,
      103,
      66,
      89,
      47,
      30,
      51,
      26,
      161,
      61,
      183,
      209,
      235,
      242,
      36,
      255,
      11,
      130,
      49,
      224,
      98,
      110,
      238,
      250,
      208,
      182,
      41,
      65,
      58,
      147,
      231,
      152,
    ],
    "tm3pc-2bjsx-hhv3v-fsrt7-wotdj-nbu3t-ewloq-uporp-tacou-lupdn-oae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      153,
      199,
      52,
      229,
      242,
      140,
      80,
      116,
      27,
      4,
      182,
      62,
      135,
      199,
      117,
      51,
      212,
      125,
      194,
      52,
      117,
      36,
      237,
      30,
      200,
      194,
      102,
      228,
      41,
      206,
      246,
      54,
    ],
    "7pwmx-4zsiq-saplf-kl2sd-4yvr3-la2yi-artrs-m7voc-htak4-fii5y-sqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      84,
      67,
      44,
      55,
      180,
      149,
      233,
      32,
      107,
      70,
      181,
      206,
      133,
      218,
      135,
      167,
      235,
      45,
      133,
      60,
      211,
      240,
      47,
      238,
      196,
      172,
      243,
      158,
      254,
      152,
      40,
      80,
    ],
    "gj6gc-mbslq-bt63y-72b7h-xs2xw-6vyuj-frvp3-tx375-dsqx5-wem6o-vqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      89,
      239,
      25,
      230,
      174,
      199,
      51,
      109,
      9,
      18,
      168,
      15,
      226,
      105,
      237,
      79,
      14,
      131,
      96,
      207,
      249,
      220,
      111,
      190,
      122,
      148,
      22,
      67,
      20,
      43,
      180,
      255,
    ],
    "6hkcx-vz4jv-4n33r-ywdvs-sefaa-tb2on-rac6s-4csut-iyahu-zmct2-5qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      118,
      247,
      245,
      45,
      116,
      149,
      92,
      192,
      69,
      131,
      138,
      110,
      247,
      27,
      136,
      45,
      213,
      51,
      155,
      160,
      88,
      189,
      207,
      16,
      133,
      248,
      147,
      179,
      84,
      93,
      68,
      191,
    ],
    "4j5xx-bj63k-iky3j-xrlt4-pel7s-t6wdq-hgqwz-c6xhn-llihg-wxska-rqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      11,
      76,
      160,
      91,
      24,
      181,
      223,
      244,
      239,
      200,
      139,
      173,
      200,
      2,
      188,
      204,
      75,
      174,
      92,
      226,
      241,
      111,
      235,
      230,
      168,
      147,
      144,
      74,
      36,
      10,
      243,
      96,
    ],
    "tg4ec-b2g4p-h42kd-k7zvb-6rls2-i2q7l-gtr4h-ymr6v-rrez4-w6fao-oqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      63,
      41,
      153,
      65,
      73,
      9,
      154,
      161,
      177,
      210,
      220,
      218,
      171,
      229,
      237,
      167,
      58,
      234,
      104,
      102,
      208,
      103,
      226,
      196,
      91,
      151,
      226,
      22,
      83,
      43,
      205,
      51,
    ],
    "swzzz-nct4o-kgh2s-fezeh-luamk-chexm-jsk4r-ks2qa-au63y-jtc7r-pae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      67,
      35,
      50,
      6,
      132,
      212,
      225,
      237,
      184,
      155,
      220,
      222,
      224,
      8,
      68,
      131,
      10,
      15,
      125,
      227,
      227,
      204,
      115,
      70,
      229,
      163,
      134,
      141,
      26,
      239,
      2,
      181,
    ],
    "f3zwq-g3ap2-42acw-twrar-6wire-5uhtr-qyu2e-v7vl7-43e3b-kdz7g-yae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      168,
      250,
      119,
      173,
      108,
      29,
      166,
      213,
      13,
      4,
      251,
      201,
      107,
      243,
      61,
      14,
      48,
      166,
      124,
      30,
      139,
      169,
      127,
      163,
      206,
      124,
      61,
      156,
      134,
      138,
      123,
      153,
    ],
    "lj3ve-ztk3f-wbkmj-garra-gm3kk-f2kas-zq6cw-6url4-ekmls-5vlm5-hae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      94,
      18,
      239,
      14,
      174,
      40,
      9,
      165,
      70,
      132,
      113,
      238,
      45,
      151,
      69,
      210,
      63,
      32,
      177,
      192,
      218,
      113,
      41,
      250,
      68,
      125,
      150,
      166,
      115,
      54,
      190,
      91,
    ],
    "j6uir-h4bk3-chdqr-hxnkr-3jp7o-yb3el-skdsd-7oejj-eubk5-5onvy-zae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      153,
      94,
      61,
      207,
      75,
      15,
      233,
      39,
      190,
      229,
      23,
      44,
      239,
      89,
      91,
      83,
      186,
      206,
      134,
      24,
      88,
      144,
      240,
      82,
      147,
      154,
      99,
      210,
      78,
      171,
      240,
      218,
    ],
    "6hvx2-ymemx-tmykh-vxyic-bgfhv-2lcmt-3oy4x-rysuf-rnerz-vqokw-sqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      220,
      98,
      76,
      202,
      18,
      236,
      29,
      174,
      190,
      221,
      0,
      126,
      200,
      56,
      231,
      121,
      144,
      166,
      218,
      63,
      141,
      255,
      150,
      140,
      238,
      191,
      58,
      14,
      131,
      144,
      86,
      47,
    ],
    "6oooh-jum6y-focwn-kx5ba-omunf-jksiz-25lqk-xvcvb-7afff-3ceei-nqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      209,
      149,
      93,
      208,
      183,
      156,
      132,
      208,
      54,
      66,
      39,
      99,
      195,
      162,
      145,
      84,
      243,
      26,
      185,
      7,
      236,
      220,
      252,
      152,
      112,
      219,
      145,
      219,
      62,
      157,
      186,
      123,
    ],
    "5mpdi-v4qj2-64are-tbe6r-6335g-6tksh-c7uzq-w3xyz-o4p5g-rwnll-vqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      118,
      127,
      49,
      210,
      187,
      118,
      43,
      201,
      250,
      155,
      44,
      190,
      159,
      134,
      80,
      79,
      22,
      66,
      47,
      32,
      111,
      228,
      230,
      30,
      197,
      123,
      115,
      169,
      127,
      234,
      36,
      38,
    ],
    "3xpep-l47ad-vhwcb-gvikf-vpkdj-dbwky-jt5wc-odcdy-b5r4k-fiqbg-7qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      61,
      172,
      70,
      121,
      13,
      216,
      10,
      56,
      176,
      35,
      138,
      195,
      225,
      193,
      118,
      111,
      179,
      4,
      154,
      59,
      70,
      212,
      6,
      196,
      173,
      133,
      204,
      255,
      66,
      49,
      122,
      30,
    ],
    "3rj6n-nnhqn-nad5q-y262v-fuhk4-myqv2-6qzld-ouk7q-fbsuo-l2fi3-6ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      184,
      15,
      71,
      5,
      177,
      66,
      1,
      25,
      172,
      248,
      129,
      251,
      1,
      233,
      15,
      80,
      4,
      77,
      247,
      43,
      24,
      147,
      204,
      164,
      75,
      78,
      129,
      18,
      158,
      122,
      62,
      110,
    ],
    "p3g3j-vvhxl-luedm-woh3j-sllez-jkbzz-274bf-hyuoc-kyo5t-kwziw-eae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      138,
      165,
      187,
      121,
      148,
      139,
      41,
      108,
      18,
      193,
      65,
      49,
      179,
      95,
      144,
      9,
      206,
      51,
      25,
      129,
      176,
      140,
      126,
      197,
      122,
      89,
      92,
      110,
      218,
      89,
      214,
      147,
    ],
    "y5xp4-nnr33-qeeeg-55unp-xr7f2-mkjfv-7qwe3-zxd7k-lmqd2-mftya-7ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      3,
      23,
      57,
      211,
      19,
      146,
      69,
      241,
      1,
      52,
      157,
      77,
      47,
      184,
      205,
      194,
      226,
      112,
      112,
      132,
      211,
      254,
      241,
      208,
      51,
      4,
      45,
      100,
      235,
      212,
      82,
      187,
    ],
    "tetdc-mvyld-p3miw-jdreb-5apjz-w73pk-3y3jo-3w6qj-2lrsc-6d2bq-nae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      205,
      89,
      241,
      142,
      234,
      149,
      76,
      31,
      200,
      227,
      21,
      9,
      150,
      87,
      217,
      41,
      182,
      191,
      183,
      254,
      250,
      219,
      123,
      178,
      20,
      68,
      136,
      9,
      244,
      169,
      209,
      159,
    ],
    "pbken-vny4r-j4a2m-zlvt2-kjj4i-pwehn-ftsa4-ne4xu-yz72s-fk6nz-eqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      121,
      215,
      149,
      3,
      131,
      139,
      43,
      1,
      121,
      31,
      102,
      193,
      139,
      199,
      97,
      78,
      25,
      211,
      166,
      171,
      167,
      59,
      174,
      0,
      185,
      43,
      185,
      158,
      222,
      234,
      82,
      135,
    ],
    "xgysg-f6alc-ft2ai-gseic-u3ohh-cvvkf-5pvjh-spcbk-gvkla-bwswo-jae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      135,
      158,
      229,
      102,
      237,
      248,
      161,
      23,
      23,
      18,
      12,
      202,
      62,
      75,
      21,
      33,
      240,
      122,
      120,
      28,
      109,
      121,
      221,
      218,
      99,
      123,
      58,
      76,
      119,
      15,
      111,
      198,
    ],
    "ykydc-iog7g-744rt-mzbay-jnwat-e5bx5-invpc-f6d22-leoix-tide2-6qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      216,
      224,
      145,
      87,
      44,
      50,
      94,
      228,
      237,
      245,
      97,
      200,
      240,
      200,
      95,
      89,
      32,
      63,
      75,
      121,
      233,
      85,
      242,
      173,
      202,
      243,
      157,
      201,
      3,
      123,
      89,
      203,
    ],
    "geihd-pwhjg-q3tno-beo64-ormih-pkjah-rrdlu-quwdk-nas5k-lmzoo-pae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      191,
      161,
      177,
      87,
      88,
      3,
      213,
      251,
      33,
      3,
      42,
      105,
      255,
      80,
      160,
      74,
      51,
      148,
      219,
      166,
      60,
      80,
      158,
      154,
      26,
      233,
      237,
      247,
      129,
      179,
      241,
      116,
    ],
    "ojfqu-qooyf-umyhe-bryn4-x6dcf-qv7ax-vnr5r-22ioq-jycjr-7le7t-uae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      220,
      26,
      140,
      215,
      120,
      151,
      121,
      59,
      181,
      182,
      187,
      187,
      186,
      178,
      172,
      130,
      143,
      33,
      44,
      49,
      239,
      125,
      140,
      209,
      165,
      233,
      218,
      113,
      212,
      54,
      138,
      26,
    ],
    "gsrhr-kwp6h-y6ibc-yftud-fzi66-vg5df-subl3-wiren-uzza6-rb5fc-dae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      185,
      243,
      201,
      157,
      5,
      76,
      87,
      20,
      131,
      55,
      28,
      171,
      171,
      171,
      235,
      167,
      26,
      149,
      175,
      47,
      29,
      183,
      90,
      158,
      255,
      83,
      98,
      160,
      1,
      104,
      186,
      179,
    ],
    "jjrbu-lwq3g-6z32f-54avq-c6jcp-sxp3o-kn4sf-hiiy4-jkuiy-252or-4ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      205,
      141,
      46,
      194,
      255,
      33,
      86,
      30,
      39,
      114,
      217,
      230,
      142,
      162,
      73,
      219,
      232,
      116,
      194,
      20,
      137,
      156,
      51,
      197,
      80,
      52,
      68,
      179,
      71,
      134,
      190,
      50,
    ],
    "anudy-m6vfi-lphxb-sazpy-la4ti-2hriw-c67ny-butfn-axcel-otvuh-oqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      1,
      62,
      185,
      80,
      22,
      44,
      7,
      216,
      93,
      245,
      62,
      1,
      117,
      144,
      82,
      242,
      57,
      233,
      83,
      181,
      146,
      209,
      49,
      33,
      202,
      92,
      3,
      142,
      40,
      182,
      234,
      40,
    ],
    "7o4d4-a6vmb-6bhh5-7ajyh-b5ejo-5bryc-gepsl-bthwu-65lee-52ebc-jqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      69,
      88,
      249,
      86,
      193,
      25,
      127,
      87,
      222,
      94,
      218,
      97,
      232,
      143,
      111,
      235,
      43,
      205,
      151,
      203,
      105,
      153,
      46,
      223,
      62,
      215,
      115,
      38,
      55,
      100,
      71,
      204,
    ],
    "n4d4s-hgx3a-nwox5-tmfqw-q2gu6-mlzhy-deyzq-zu6r7-wryv2-napyl-qae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      69,
      80,
      68,
      221,
      158,
      175,
      122,
      13,
      212,
      99,
      216,
      225,
      148,
      244,
      193,
      11,
      212,
      148,
      60,
      252,
      155,
      234,
      240,
      231,
      174,
      64,
      116,
      55,
      61,
      21,
      72,
      147,
    ],
    "trupz-4o3zm-6itr3-6fjf3-ipbci-r2scy-pvycg-xlh4x-vtokf-avpr6-oqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      177,
      193,
      99,
      227,
      20,
      87,
      229,
      175,
      153,
      3,
      60,
      32,
      163,
      19,
      55,
      28,
      58,
      0,
      35,
      122,
      59,
      237,
      242,
      206,
      140,
      223,
      239,
      71,
      93,
      181,
      184,
      117,
    ],
    "ggo52-qw45f-gqsnk-kc5i5-dag7l-7qkr4-2sy44-wxvr4-gohy7-ep56u-2ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      3,
      145,
      230,
      70,
      242,
      159,
      135,
      146,
      148,
      116,
      72,
      151,
      67,
      210,
      149,
      138,
      189,
      151,
      61,
      237,
      24,
      38,
      209,
      70,
      177,
      213,
      205,
      103,
      174,
      5,
      181,
      93,
    ],
    "ufrjv-g66xi-c2bye-vujv7-cjih6-6jimn-ih2mx-4aev6-rzhu2-4c5xn-7ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      4,
      98,
      59,
      71,
      103,
      169,
      121,
      216,
      84,
      241,
      24,
      234,
      173,
      18,
      119,
      123,
      95,
      250,
      10,
      176,
      217,
      100,
      7,
      8,
      246,
      133,
      121,
      203,
      79,
      103,
      0,
      53,
    ],
    "vsuqg-6hald-hxxxi-bxr2s-e5af5-p5lsr-2sutj-pip7r-co24u-2he35-hqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      114,
      222,
      27,
      22,
      0,
      119,
      103,
      78,
      116,
      90,
      157,
      3,
      231,
      90,
      148,
      50,
      98,
      42,
      173,
      168,
      34,
      157,
      54,
      209,
      43,
      72,
      206,
      86,
      120,
      130,
      224,
      211,
    ],
    "as7de-zpig4-4hbwa-gnwlr-yqk4x-wxrme-n47bg-ngzcn-ekzyt-xuv3h-sae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      200,
      207,
      78,
      137,
      154,
      114,
      39,
      182,
      86,
      2,
      133,
      33,
      186,
      109,
      124,
      48,
      85,
      40,
      225,
      32,
      73,
      141,
      178,
      225,
      69,
      181,
      68,
      139,
      150,
      248,
      36,
      205,
    ],
    "eweqa-s7ilr-pmqbi-7gx46-hsiv4-pn3hq-zk6zi-gwktg-rn2mb-piahs-cqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      47,
      46,
      113,
      96,
      231,
      117,
      184,
      153,
      179,
      146,
      27,
      58,
      150,
      118,
      55,
      58,
      84,
      44,
      126,
      228,
      150,
      93,
      59,
      67,
      149,
      39,
      129,
      130,
      11,
      136,
      11,
      147,
    ],
    "qccxj-nhnre-k2hq2-zxdqw-3kjpf-rbnn6-6ngt6-meoqb-c5ypx-jltjs-mqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      61,
      184,
      135,
      70,
      167,
      222,
      247,
      117,
      68,
      122,
      235,
      234,
      176,
      127,
      53,
      167,
      171,
      50,
      90,
      30,
      21,
      108,
      29,
      7,
      109,
      162,
      239,
      152,
      140,
      244,
      207,
      141,
    ],
    "chm6s-bxqgk-jv6em-fbfrr-o54oi-idorx-rdpj7-asc5a-wmujl-awa77-2qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      136,
      236,
      205,
      176,
      206,
      171,
      26,
      65,
      163,
      52,
      150,
      219,
      252,
      122,
      186,
      193,
      69,
      209,
      103,
      67,
      99,
      197,
      39,
      243,
      103,
      7,
      181,
      59,
      53,
      79,
      125,
      35,
    ],
    "5jo56-bxsxy-ocmas-lzhqq-hvtc3-7iwps-76qyk-abz3u-rn3xr-ya23r-4qe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      111,
      237,
      92,
      25,
      191,
      205,
      246,
      127,
      30,
      141,
      154,
      134,
      111,
      130,
      109,
      137,
      203,
      5,
      189,
      205,
      64,
      203,
      99,
      58,
      93,
      118,
      69,
      248,
      35,
      148,
      102,
      92,
    ],
    "s2p3k-c7zfo-3ogmz-esx75-id6pg-6xv72-kifmd-gp46u-ay6vt-d7i5d-5ae" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      56,
      232,
      122,
      143,
      204,
      36,
      205,
      170,
      216,
      84,
      26,
      216,
      138,
      13,
      31,
      82,
      26,
      140,
      155,
      188,
      41,
      55,
      147,
      130,
      5,
      86,
      2,
      202,
      89,
      210,
      38,
      255,
    ],
    "felsm-ix5rz-avdrd-wfwnu-w2zw4-cgtnj-e3qpu-ulcsq-icq5y-jwwhn-jqe" => Uint8Array [
      48,
      42,
      48,
      5,
      6,
      3,
      43,
      101,
      112,
      3,
      33,
      0,
      25,
      9,
      213,
      238,
      251,
      176,
      7,
      91,
      49,
      118,
      6,
      155,
      122,
      196,
      166,
      233,
      153,
      52,
      52,
      42,
      143,
      229,
      179,
      236,
      48,
      29,
      32,
      182,
      207,
      69,
      62,
      83,
    ],
  },
  "subnetId": "tdb26-jop6k-aogll-7ltgs-eruif-6kk7m-qpktf-gdiqx-mxtrf-vb5e6-eqe",
}
`;
